trying to fix weird, mobile device only spacing bug

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 body {
+  overflow-x: hidden !important;
+
   }
 .navbar-brand img {
     width: 200px;
